[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-tool"
version = "1.0.0"
description = "A minimal repo-like tool optimized for Windows"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
claw = "claw:main"

[tool.setuptools]
py-modules = ["claw"]
